curl is needed for alpine, update comment for Alpine, silent untar.

--- a/9/jdk/alpine/Dockerfile.hotspot
+++ b/9/jdk/alpine/Dockerfile.hotspot
@@ -31,7 +31,7 @@ RUN apk --update add --no-cache ca-certificates curl openssl binutils xz \
     && tar -xf /tmp/gcc-libs.tar.xz -C /tmp/gcc \
     && mv /tmp/gcc/usr/lib/libgcc* /tmp/gcc/usr/lib/libstdc++* /usr/glibc-compat/lib \
     && strip /usr/glibc-compat/lib/libgcc_s.so.* /usr/glibc-compat/lib/libstdc++.so* \
-    && apk del curl binutils \
+    && apk del binutils \
     && rm -rf /tmp/${GLIBC_VER}.apk /tmp/gcc /tmp/gcc-libs.tar.xz /var/cache/apk/*
 
 ENV JAVA_VERSION jdk-9+181
@@ -60,7 +60,7 @@ RUN set -eux; \
     echo "${ESUM}  /tmp/openjdk.tar.gz" | sha256sum -c -; \
     mkdir -p /opt/java/openjdk; \
     cd /opt/java/openjdk; \
-    tar -xvf /tmp/openjdk.tar.gz; \
+    tar -xf /tmp/openjdk.tar.gz; \
     rm -f /tmp/openjdk.tar.gz;
 
 ENV PATH=/opt/java/openjdk/jdk-9+181/bin:$PATH
