--- a/9/jdk/ubuntu/Dockerfile.openj9
+++ b/9/jdk/ubuntu/Dockerfile.openj9
@@ -21,7 +21,7 @@ FROM ubuntu:16.04
 
 MAINTAINER Dinakar Guniguntala <dinakar.g@in.ibm.com> (@dinogun)
 
-RUN apt-get update \
+RUN rm -rf /var/lib/apt/lists/* && apt-get clean && apt-get update \
     && apt-get install -y --no-install-recommends curl ca-certificates \
     && rm -rf /var/lib/apt/lists/*
 
@@ -51,7 +51,7 @@ RUN set -eux; \
     echo "${ESUM}  /tmp/openjdk.tar.gz" | sha256sum -c -; \
     mkdir -p /opt/java/openjdk; \
     cd /opt/java/openjdk; \
-    tar -xvf /tmp/openjdk.tar.gz; \
+    tar -xf /tmp/openjdk.tar.gz; \
     rm -f /tmp/openjdk.tar.gz;
 
 ENV PATH=/opt/java/openjdk/jdk-9+181/bin:$PATH
